# MTGA_Draft_17Lands

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  release_notes.txt  repomix.config.json  requirements.txt
builder/: Installer.iss
desktop/: README.md  index.html  package-lock.json  package.json  pyproject.toml
desktop/.github/workflows/: publish.yaml
desktop/scripts/linux/: build.sh
desktop/scripts/macos/: build.sh
desktop/scripts/windows/: build.ps1
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  README.md  pyproject.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src-python/mtga_bridge/: __init__.py  __main__.py  boot.py  commands.py  compare_session.py  datasets.py  deck_session.py  deck_view.py  orchestrator_adapter.py  paths.py  recap.py  runtime.py  sealed_session.py  services.py  snapshot.py  tier_service.py  viewmodels.py
desktop/src/api/: client.ts  events.ts  types.ts
desktop/src/components/: DataTable.tsx  ManaCost.tsx  cardColumns.tsx
desktop/src/features/compare/: ComparePage.tsx
desktop/src/features/dashboard/: AdvisorPanel.tsx  DashboardPage.tsx  PackTable.tsx  PoolSummaryStrip.tsx  SignalLedger.tsx
desktop/src/features/datasets/: DatasetsPage.tsx
desktop/src/features/deck/: DeckPage.tsx  DeckStatsView.tsx  SimResultView.tsx
desktop/src/features/overlay/: MiniOverlay.tsx
desktop/src/features/recap/: RecapPage.tsx
desktop/src/features/sealed/: SealedPage.tsx
desktop/src/state/: useDraftState.ts  useMiniMode.ts  useSettings.ts
desktop/src/styles/: app.css  tokens.css
(+74 files in other folders)
