[project]
name = "workspace"
version = "0.2.0"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = ["mtga-bridge"]

[tool.uv.workspace]
members = ["src-tauri"]

[tool.uv.sources]
mtga-bridge = { workspace = true }


[tool.pyright]
# See: <https://pytauri.github.io/pytauri/0.5/usage/tutorial/build-standalone/#get-portable-python>
# ref: <https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options>
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/dist",
    "**/.*",
    "**/pyembed",
    # 👇 necessary, because when `tauri-cli bundles python,
    # it will copy `pyembed` to the target directory (i.e., rust output dir).
    "**/target",
    # 👆
]
